--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -53,5 +53,5 @@ jobs:
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: dist/
+          user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
