--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 keywords = ["ai", "agents", "ollama", "tools"]
 dependencies = [
     "requests>=2.25.1",
+    "aiohttp>=3.8.0",
     "duckduckgo-search>=4.1.1",
 ]
 requires-python = ">=3.7"
