feat!: introduce workflow operators and simplify API
BREAKING CHANGES:
- Remove Orchestrator, ExecutionMode, Task classes
- Remove add_tool/add_agent methods (use with_tools/with_agents)
- Remove execute_tool/process_input aliases (use call/infer)

Features:
- Add workflow composition with >> (sequential) and & (parallel) operators
- Add Agent.__call__() for clean workflow step creation
- Add automatic context passing between workflow steps
- Add lambda support for precise data flow control

Changes:
- Simplify API: with_tools/with_agents always require lists
- Update all examples to use workflow operators
- Consolidate documentation into README
- Update default model examples to qwen3

Added:
- workflow.py module with Step, SequentialStep, ParallelStep
- 18 comprehensive workflow tests
- New workflow examples
- CHANGELOG.md

Removed:
- Orchestrator-based multi-agent system
- Backward compatibility aliases
- SERVING.md documentation
- Redundant example files

Version: 1.0.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "agentu"
-version = "0.3.0"
+version = "1.0.0"
 description = "A flexible Python package for creating AI agents with customizable tools"
 readme = "README.md"
 authors = [
@@ -21,11 +21,14 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
 ]
-keywords = ["ai", "agents", "ollama", "tools"]
+keywords = ["ai", "agents", "openai", "llm", "tools"]
 dependencies = [
     "requests>=2.25.1",
     "aiohttp>=3.8.0",
     "duckduckgo-search>=4.1.1",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
+    "pydantic>=2.0.0",
 ]
 requires-python = ">=3.7"
 
