--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "agentu"
-version = "1.6.0"
+version = "1.6.1"
 description = "A flexible Python package for creating AI agents with customizable tools"
 readme = "README.md"
 authors = [
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
 ]
-keywords = ["ai", "agents", "openai", "llm", "tools"]
+keywords = ["ai", "agents", "openai", "llm", "tools", "cli"]
 dependencies = [
     "requests>=2.25.1",
     "aiohttp>=3.8.0",
@@ -31,6 +31,9 @@ dependencies = [
     "pydantic>=2.0.0",
 ]
 requires-python = ">=3.7"
+
+[project.scripts]
+agentu = "agentu.cli:main"
 
 [project.urls]
 "Homepage" = "https://github.com/hemanth/agentu"
